# dbt-data-build-tool-deployment-using-terraform-aws-gitlab

./: .gitignore  .gitlab-ci.yml  README.md  dbt.drawio  gitlab-backup.yml  update_dag.sh
IAC/modules/IAM/: main.tf  variables.tf
IAC/modules/SG/: main.tf  variables.tf
IAC/modules/ecr/: main.tf  variables.tf
IAC/modules/ecs/: main.tf  outputs.tf  variables.tf
IAC/modules/mwaa/: main.tf  variables.tf
IAC/modules/s3/: main.tf  outputs.tf  variables.tf
IAC/modules/secrets/: main.tf  output.tf  variable.tf
IAC/modules/sns/: main.tf  outputs.tf  variables.tf
IAC/root/: .terraformrc  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
dags/: dbt_ecs_task.py
demo_dbt/: profiles.yml
hero/: profiles.yml  requirements.txt
maximo/: Dockerfile  README.md
project/: Dockerfile  profiles.yml  pyproject.toml
