[tool.poetry]
name = "demo_dbt"
version = "0.1.0"
description = ""
authors = ["kolja huang <chao.a.huang@capgemini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.9"
dbt-snowflake = "^1.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
